# task-sama

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Anchor.toml  BACKEND_MIGRATION.md  Caddyfile  Dockerfile  PHASE3_COMPONENT_MIGRATION.md  README.md  index.html  nginx.conf  note.txt  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: dailyBackup.yml  deploy.yml  deployBackend.yml  deployMongoCustom.yml  docker-image.yml  restartBackend.yml  restartGanache.yml  restartMongo.yml  startBackend.yml  startMongo.yml  startMongoContainer.yml
backend/: .dockerignore  .env.example  Dockerfile  DockerfileBackend  DockerfileMongo  README.md  batch.js  contractAddresses.js  db-postgres.js  db.js  docker-entrypoint.sh  index-postgres.js  index.js  migrate.js  package-lock.json  package.json  schema.sql  seed.sql  start.sh
backend/helpers/: TasksABI.json  contractAddresses.js
backend/mongoDB/: mongocheatsheet.md  mongod.conf
backend/routes/: comments-postgres.js  comments.js  images-postgres.js  images.js  likes-postgres.js  likes.js  tasks-postgres.js  tasks.js  users-postgres.js  users.js  (+3 more)
concat/: conca.txt  concatenate.js
docs/: FRONTEND_MIGRATION.md  PROJECT_ANALYSIS.md  SOLANA_MIGRATION.md  SOLANA_README.md
programs/tasksama/: Cargo.toml
programs/tasksama/src/: lib.rs
public/: like.json
server/: package.json
src/: App.css  App.js  App.vue  env.d.ts  examples.txt  index.css  index.js  main.js  main.ts  style.css
tests/: tasksama.ts
truffle/: truffle-config.js
(+102 files in other folders)
